# network-proxy-rs

./: .env.example  .gitignore  Cargo.toml  justfile  mprocs.json  rustfmt.toml
.cargo/: config.toml
.sqlx/: query-06fb3b073627990e3c03ec6fd251156e90590951427ca7826a32d4906cc1e400.json  query-2c7c4c7bdb0a4d9d1071dd0e7d234f119c488ceaf960cf0b9238dd658b81f245.json  query-3da9cfbb21b5d86f086450081ae7668a7573b834a20264980f9dedc23cd79942.json  query-86f953e7abff8e430a02c3c34c4aa9f83a6b68db2354506a5d759d837d0fb6b2.json  query-8eb775acd8ce6e5245ee0354f3651cbd8c4680d89ddaab063d0fb0524af71f66.json  query-acec08e3ca782270ed3b8d5eb9780fcb5a53351d983cc7064b82b2b13df44063.json  query-fae63c41d79e78b10acfea14db7eaad4648e257c48cb7a588e5a5921fd74c8a3.json
crates/libs/lib-auth/: Cargo.toml
crates/libs/lib-auth/src/: config.rs
crates/libs/lib-auth/src/pwd/: error.rs  mod.rs
crates/libs/lib-auth/src/pwd/scheme/: error.rs  mod.rs  scheme_01.rs  scheme_02.rs
crates/libs/lib-auth/src/token/: error.rs  mod.rs
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: config.rs  lib.rs
crates/libs/lib-core/src/_dev_utils/: dev_db.rs  mod.rs
crates/libs/lib-core/src/ctx/: error.rs  mod.rs
crates/libs/lib-core/src/model/: error.rs  mod.rs
crates/libs/lib-core/src/model/store/: mod.rs
crates/libs/lib-core/src/model/store/dbx/: error.rs  mod.rs
crates/libs/lib-core/src/model/user/: error.rs  mod.rs
crates/libs/lib-hotreload/: Cargo.toml
crates/libs/lib-hotreload/src/: config.rs  http_layer.rs  lib.rs  utils.rs
crates/libs/lib-hotreload/src/file_layer/: watcher.rs
crates/libs/lib-hotreload/src/templates/: reload.js  websocket.js
crates/libs/lib-nginx/: Cargo.toml
crates/libs/lib-nginx/src/: lib.rs
crates/libs/lib-utils/: Cargo.toml
crates/libs/lib-utils/src/: b58.rs  b64.rs  envs.rs  hex.rs  lib.rs  time.rs
crates/libs/lib-web/: Cargo.toml
crates/libs/lib-web/src/: config.rs  error.rs  lib.rs  tera.rs
crates/libs/lib-web/src/extractors/: datastar_query.rs  form_or_json.rs  mod.rs
crates/libs/lib-web/src/handlers/api/: handlers_login.rs  mod.rs
crates/libs/lib-web/src/handlers/web/: auth.rs  dashboard.rs  home.rs  mod.rs  proxy.rs
crates/libs/lib-web/src/log/: mod.rs
crates/libs/lib-web/src/middleware/: mw_auth.rs  mw_req_stamp.rs  mw_res_map.rs
crates/libs/lib-web/src/utils/: token.rs
crates/services/web-server/: Cargo.toml
crates/services/web-server/examples/: quick_dev.rs  register.rs
crates/services/web-server/src/: error.rs  lib.rs  main.rs  main_hot_reload.rs
crates/services/web-server/src/routes_api/: mod.rs  routes_login.rs
crates/services/web-server/src/routes_web/: mod.rs  routes_static.rs
crates/services/web-server/src/routes_web/routes_fragmant/: mod.rs
db-sqlite/fixtures/: dev-seed-user.sql
db-sqlite/migrations/: 20251106051707_users_schema.sql  20251106153239_root_user.sql  20251113155926_acme.sql
frontend/: .gitignore  biome.jsonc  input.css  package.json  tsconfig.json
frontend/src/hot-reload/: websocket.ts
frontend/src/lib/: components.ts  error.ts  superposition.ts  theme.ts  toaster.ts
frontend/src/routes/dashboard/: dashboard.ts
frontend/src/routes/login/: login.ts
frontend/src/routes/register/: index.ts
frontend/src/routes/toast/: toasterTest.ts
frontend/src/types/: index.ts
frontend/src/utils/: constants.ts  debounce.ts  defaultSetup.ts  helpers.ts  hot-reload.ts  http-codes.ts  index.ts  logger.ts  password.ts  signals.ts
frontend/static/js/: initialThemeLoad.js
frontend/templates/: error.html  error404.html  home.html
frontend/templates/fragmants/: defaultTemplates.html  footer.html  head.html  navbar.html
frontend/templates/routes/: dashboard.html  login.html  proxy.html  register.html
