[workspace.lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

[workspace]
resolver = "2"
members = [
  "crates/libs/lib-utils",
  "crates/libs/lib-nginx",
  "crates/libs/lib-auth",
  "crates/libs/lib-core",
  "crates/libs/lib-web",

  "crates/services/web-server",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

thiserror = { version = "2" }

uuid = { version = "1", features = ["v4", "v7", "fast-rng"] }
chrono = "0.4"
rand = "0.9"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["time_0_3"] }

sqlx = { version = "0.8", features = ["macros", "runtime-tokio", "sqlite", "uuid", "chrono"] }

strum = "0.27"
strum_macros = "0.27"

url = { version = "2", features = ["serde"] }

axum = { version = "0.8", features = ["macros", "ws"] }
tower-cookies = "0.11"
tower-http = { version = "0.6", features = ["fs"] }

## Dev Dependency
color-eyre = "0.6"

[profile.dev.package.sqlx-macros]
opt-level = 3
