[package]
name = "lib-utils"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
base58 = "0.2"
base64 = "0.22"
hex = "0.4"
chrono = { workspace = true }
thiserror = { workspace = true }
strum_macros = { workspace = true }
serde = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true, features = ["chrono"] }
tracing = { workspace = true, optional = true }

[features]
default = ["tracing", "serde"]
serde = ["dep:serde"]
sqlx = ["dep:sqlx"]
tracing = ["dep:tracing"]
