[package]
name = "lib-web"
version = "0.1.0"
edition = "2024"

[dependencies]
# -- App Libs
lib-auth = { path = "../../libs/lib-auth" }
lib-core = { path = "../../libs/lib-core" }
lib-utils = { path = "../../libs/lib-utils" }
lib-hotreload = { path = "../../libs/lib-hotreload", optional = true }

# -- Async
# -- Web
axum = { workspace = true }
tera = "1"
# -- Json
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
strum_macros = { workspace = true }
# -- Others
chrono = { workspace = true }
tower-cookies = { workspace = true }
tower-http = { workspace = true }
thiserror = { workspace = true }
# -- Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true

[features]
default = []
hot_reload = ["dep:lib-hotreload"]
