[package]
name = "web-server"
version = "0.1.0"
edition = "2024"
default-run = "web-server"

[[bin]]
name = "web-server"
path = "src/main.rs"

[[bin]]
name = "web-server-hot-reload"
path = "src/main_hot_reload.rs"
required-features = ["hot_reload"]

[dependencies]
# -- App Libs
# -- Web
axum = { workspace = true }
lib-auth = { path = "../../libs/lib-auth" }
lib-core = { path = "../../libs/lib-core" }
lib-utils = { path = "../../libs/lib-utils" }
lib-web = { path = "../../libs/lib-web" }
lib-hotreload = { path = "../../libs/lib-hotreload", optional = true }
# -- Json
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
strum_macros = { workspace = true }
# -- Others
chrono = { workspace = true }
thiserror = { workspace = true }
# -- Async
tokio = { workspace = true }
tower = "0.5"
tower-cookies = { workspace = true }
tower-http = { workspace = true }
# -- Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

futures = { version = "0.3.31", optional = true }

[dev-dependencies]
httpc-test = "0.1"

[features]
default = []
hot_reload = ["lib-web/hot_reload", "dep:futures", "dep:lib-hotreload"]
